--- a/packages/vue/examples/reactivity/reactive.html
+++ b/packages/vue/examples/reactivity/reactive.html
@@ -1,11 +1,3 @@
-<!--
- * @Author: kite 2257440643@qq.com
- * @Date: 2024-03-04 22:50:43
- * @LastEditors: kite 2257440643@qq.com
- * @LastEditTime: 2024-03-04 22:55:41
- * @FilePath: \vue-mini\packages\vue\examples\reactivity\reactive.html
- * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
--->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -30,9 +22,9 @@
     console.log(obj.name)
 
     // 调用 effect 方法
-    // effect(() => {
-    //   document.querySelector('#app').innerText = obj.name
-    // })
+    effect(() => {
+      document.querySelector('#app').innerText = obj.name
+    })
 
     setTimeout(() => {
       obj.name = 'Smile'
